--- a/myTestng/test-output/index.html
+++ b/myTestng/test-output/index.html
@@ -48,7 +48,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Apr 19, 2020 08:00:13 PM</span>
+                    <span class='label suite-start-time blue darken-3'>May 12, 2020 12:31:21 PM</span>
 				</a>
 			</li>
 			<li>
@@ -161,14 +161,14 @@
 				<li class='test displayed active  fail' status='fail' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>test1</span>
-						<span class='test-time'>Apr 19, 2020 08:00:13 PM</span>
+						<span class='test-time'>May 12, 2020 12:31:21 PM</span>
 						<span class='test-status right fail'>fail</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Apr 19, 2020 08:00:13 PM</span>
-	<span class='label end-time'>Apr 19, 2020 08:00:13 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+20ms</span>
+	<span class='label start-time'>May 12, 2020 12:31:21 PM</span>
+	<span class='label end-time'>May 12, 2020 12:31:21 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+30ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -182,7 +182,7 @@
 			<tbody>
 				<tr class='log' status='fail'>
 					<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
-					<td class='timestamp'>8:00:13 PM</td>
+					<td class='timestamp'>12:31:21 PM</td>
 					<td class='step-details'><pre>java.lang.AssertionError: expected [2] but found [1]
 	at org.testng.Assert.fail(Assert.java:97)
 	at org.testng.Assert.assertEqualsImpl(Assert.java:136)
@@ -229,14 +229,14 @@
 				<li class='test displayed active  fail' status='fail' bdd='false' test-id='2'>
 					<div class='test-heading'>
 						<span class='test-name'>logoDemo</span>
-						<span class='test-time'>Apr 19, 2020 08:00:13 PM</span>
+						<span class='test-time'>May 12, 2020 12:31:21 PM</span>
 						<span class='test-status right fail'>fail</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Apr 19, 2020 08:00:13 PM</span>
-	<span class='label end-time'>Apr 19, 2020 08:00:13 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+5ms</span>
+	<span class='label start-time'>May 12, 2020 12:31:21 PM</span>
+	<span class='label end-time'>May 12, 2020 12:31:21 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+1ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -250,14 +250,14 @@
 			<tbody>
 				<tr class='log' status='debug'>
 					<td class='status debug' title='debug' alt='debug'><i class='material-icons'>low_priority</i></td>
-					<td class='timestamp'>8:00:13 PM</td>
-					<td class='step-details'>这个是我们自己写的日志</td>
+					<td class='timestamp'>12:31:21 PM</td>
+					<td class='step-details'>这个是我们自己写的日志kkkkkk</td>
 				</tr>
 				<tr class='log' status='fail'>
 					<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
-					<td class='timestamp'>8:00:13 PM</td>
+					<td class='timestamp'>12:31:21 PM</td>
 					<td class='step-details'><pre>java.lang.RuntimeException: 这是我自己的运行时异常
-	at com.testng.TestMethodsDemo.logoDemo(TestMethodsDemo.java:31)
+	at com.testng.TestMethodsDemo.logoDemo(TestMethodsDemo.java:32)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -297,13 +297,13 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='3'>
 					<div class='test-heading'>
 						<span class='test-name'>test2</span>
-						<span class='test-time'>Apr 19, 2020 08:00:13 PM</span>
+						<span class='test-time'>May 12, 2020 12:31:21 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Apr 19, 2020 08:00:13 PM</span>
-	<span class='label end-time'>Apr 19, 2020 08:00:13 PM</span>
+	<span class='label start-time'>May 12, 2020 12:31:21 PM</span>
+	<span class='label end-time'>May 12, 2020 12:31:21 PM</span>
 	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
 	<div class='test-steps'>
@@ -318,7 +318,7 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>8:00:13 PM</td>
+					<td class='timestamp'>12:31:21 PM</td>
 					<td class='step-details'>Test passed</td>
 				</tr>
 			</tbody>
@@ -331,14 +331,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='4'>
 					<div class='test-heading'>
 						<span class='test-name'>test3</span>
-						<span class='test-time'>Apr 19, 2020 08:00:13 PM</span>
+						<span class='test-time'>May 12, 2020 12:31:21 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Apr 19, 2020 08:00:13 PM</span>
-	<span class='label end-time'>Apr 19, 2020 08:00:13 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+1ms</span>
+	<span class='label start-time'>May 12, 2020 12:31:21 PM</span>
+	<span class='label end-time'>May 12, 2020 12:31:21 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -352,7 +352,7 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>8:00:13 PM</td>
+					<td class='timestamp'>12:31:21 PM</td>
 					<td class='step-details'>Test passed</td>
 				</tr>
 			</tbody>
@@ -428,7 +428,7 @@
                                         </thead>
                                         <tbody>
                                                     <tr>
-                                                        <td>Apr 19, 2020 08:00:13 PM</td>
+                                                        <td>May 12, 2020 12:31:21 PM</td>
                                                         <td class='linked' test-id='1'>test1</td>
                                                         <td><pre><pre>java.lang.AssertionError: expected [2] but found [1]
 	at org.testng.Assert.fail(Assert.java:97)
@@ -488,10 +488,10 @@
                                         </thead>
                                         <tbody>
                                                     <tr>
-                                                        <td>Apr 19, 2020 08:00:13 PM</td>
+                                                        <td>May 12, 2020 12:31:21 PM</td>
                                                         <td class='linked' test-id='2'>logoDemo</td>
                                                         <td><pre><pre>java.lang.RuntimeException: 这是我自己的运行时异常
-	at com.testng.TestMethodsDemo.logoDemo(TestMethodsDemo.java:31)
+	at com.testng.TestMethodsDemo.logoDemo(TestMethodsDemo.java:32)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -557,19 +557,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Apr 19, 2020 08:00:13 PM</div>
+					<div class='panel-lead'>May 12, 2020 12:31:21 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Apr 19, 2020 08:00:13 PM</div>
+			 		<div class='panel-lead'>May 12, 2020 12:31:21 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>20ms</div>
+					<div class='panel-lead'>30ms</div>
 				</div>
 			</div>
 		</div>
